--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -7,6 +7,12 @@
 @import 'components/footer';
 @import 'components/catalog';
 @import 'components/banner';
-@import 'components/promo-card';
+@import 'components/stock-card';
 @import 'components/slider-brends';
-@import 'components/news'
+@import 'components/news';
+@import 'components/benefits';
+@import 'components/product-card';
+@import 'components/social';
+@import 'components/mobail';
+
+
