--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -30,6 +30,7 @@ textarea {
     padding: 0;
     border: none;
     appearance: none;
+    outline: none;
 }
 
 input::placeholder,
@@ -114,6 +115,9 @@ body {
     width: 100%;
     padding: 0 15px;
     margin: 0 auto;
+    @include r($sm) {
+        padding: 0 15px;
+    }
 }
 
 .sr-only {
@@ -130,20 +134,23 @@ body {
     overflow: hidden;
 }
 
-.header__logo {
-    margin-right: 24px;
-}
 
 .logo {
     transition: box-shadow, opacity;
     transition-duration: 0.5s, 0.6s;
     border-radius: 3px;
+    overflow: inherit;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+       
+    
     &:focus {
         box-shadow: 0 0 0 3px $green-100;
     }
     &:hover {
         opacity: 0.7;
     }
+   
 }
 
 .button {
@@ -156,6 +163,7 @@ body {
     font-style: normal;
     border-radius: 0 6px 6px 0;
     transition: box-shadow 0.4s, background-color 0.5s, opacity 0.7s, color 0.6s;
+   
     &:focus {
         box-shadow: 0 0 0 4px rgba(99, 166, 14, 0.5);
     }
@@ -168,11 +176,12 @@ body {
         padding: 10px 22px;
         font-size: 18px;
         line-height: 1.3;
+       
      }
     &--white {
         background-color: $white;
         color: $green-900;
-       
+     
     
         &:hover {
             background-color: $green-200;
@@ -186,6 +195,10 @@ body {
     &--green {
         color: $white;
         background-color: $green-900;
+        @include r($sm) {
+            font-size: 14px;
+            font-weight: normal;
+         }
         &:hover {
             background-color: #4D810C;
         }
@@ -205,4 +218,8 @@ body {
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 30px;
+    @include r($sm) {
+        font-size: 24px;
+        margin-bottom: 22px;
+    }
 }
