--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -11,3 +11,17 @@ $silver-600: #C1C1C1;
 $silver-200: #f5f5f5;
 $silver-100: #F6F6F6;
 $white: #FFFFFF;
+
+
+$sm: 576;
+$md: 768;
+$lg: 992;
+$xl: 1200;
+$dxl:1500;
+
+
+@mixin r($width) {
+    @media (max-width: #{$width}px) {
+      @content;
+     }
+}
