--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -1,16 +1,40 @@
 .footer {
-
+    @include r($md) {
+        text-align: center;
+    }
     &__top {
         padding: 32px 0 42px;
+        @include r($sm) {
+            padding: 23px 0 24px;
+        }
     }
     &__inner {
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
+       
     }
+
 
     &__info {
         column-count: 3;
         column-gap: 74px;
+        transition: 0.4s;
+        @include r($xl) {
+            order: -1;
+            column-count: 2;
+            column-gap: 45px;
+        }
+        @include r($lg) {
+            column-count: 3;
+        }
+        @include r($md) {
+            column-count: 2;
+            margin: 22px auto 0;
+            text-align: left;
+            column-gap: 82px;
+        }
+       
     }
 
     &__logo {
@@ -18,21 +42,52 @@
         display: inline-block;
     }
 
+    &__form-wrapper {
+        margin-right: 150px;
+        transition: 0.4s;
+        @include r($xl) {
+            margin-right: 70px;
+        }
+        @include r($lg) {
+            display: block;
+            margin-top: 40px;
+            width: 100%;
+        }
+        @include r($md) {
+            border-top: 1px solid rgba(225, 255, 255, 0.1);
+            padding-top: 24px;
+            width: 100%;
+            margin: 0 auto ;
+        }
+        
+    }
     &__list {
         break-after: column;
         margin-bottom: 30px;
+        @include r($xl) {
+            margin-bottom: 0;
+        }
     }
-
+   
     &__form {
         max-width: 230px;
         width: 100%;
-        margin-right: 150px;
+        display: flex;
+        @include r($md) {
+            max-width: 100%;
+            justify-content: center;
+        }
     }
     &__subtitle {
         font-size: 14px;
         line-height: 1;
         font-weight: 400;
         margin-bottom: 20px;
+        @include r($sm) {
+            text-align: left;
+            padding-left: 23px;
+            margin-bottom: 15px;
+        }
     }
 
     &__label {
@@ -68,11 +123,23 @@
     &__item {
         max-width: 214px;
         width: 100%;
+        transition: 0.4s;
+        @include r($xl) {
+            order: -3;
+            margin-right: 30px;
+        }
+        @include r($md) {
+            max-width: 100%;
+            display: block;
+            margin-right: 0;
+            line-height: 1.2;
+        }
     }
 
     
     &__part {
         margin-bottom: 18px;
+        
     }
 
     &__link {
@@ -98,61 +165,42 @@
 
 }
 
-.social {
-    display: flex;
-
-    &__link {
-        background-size: cover;
-        background-repeat: no-repeat;
-        display: block;
-        width: 32px;
-        height: 32px;
-        border-radius: 3px;
-        transition: color, opacity, box-shadow;
-        transition-duration: 0.4s, 0.7s, 0.5s;
-
-        &:focus {
-            box-shadow: 0 0 0 3px $green-200;
-        } 
-        &:hover {
-            opacity: 0.7;
-        }
-
-        &--active:active {
-            background-repeat: no-repeat;
-            background-size: contain;
-            filter: invert(93%) sepia(13%) saturate(369%) hue-rotate(42deg) brightness(104%) contrast(86%);
-        }
-
-    }
-    &__item {
-        &:not(:last-child) {
-            margin-right: 11px;
-        }
-
-    }
-
-}
-
-
 
 .payment {
     border-top: 1px solid rgba(255, 255, 255, 0.1);
+    @include r($sm) {
+        height: 121px;
+        padding: 24px 0;
+    }
 
     &__inner {
         height: 60px;
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap;
+        @include r($lg) {
+            justify-content: space-around;
+        }
+        @include r($sm) {
+            display: block;
+        }
+       
     }
 
     &__text {
         font-size: 14px;
         text-transform: uppercase;
+        @include r($md) {
+          order: 2;
+        }
     }
     &__info {
         display: flex;
         height: inherit;
+        @include r($sm) {
+            justify-content: center;
+        }
     }
 
     &__item {
