--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -1,3 +1,50 @@
+
+.header {
+    &__logo {
+        margin-right: 24px;  
+    }
+    
+    &__btn-adaptiv {
+        display: flex;
+        position: absolute;
+        right: 17px;
+        top: 50%;
+        transform: translateY(-50%);
+        display: none;
+        @include r($lg) {
+            display: flex;
+        }
+    }
+    &__btn-link {
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        border-radius: 3px;
+        transition-property: box-shadow, opacity, color ;
+        transition-duration: 0.5s, 0.4s, 0.3s;
+        &:focus {
+            box-shadow: 0 0 0 3px $green-100;
+         }
+         &:hover {
+             opacity: 0.7;
+         }
+         &:active {
+             color: $green-100;
+         }
+    }
+    &__btn-link:nth-child(1) {
+        background-image: url('../images/icon/icon-car.svg');
+        width: 32px;
+        height: 22px;
+        margin-right: 30px;
+    }
+    &__btn-link:nth-child(2) {
+        background-image: url('../images/icon/icon-tel.svg');
+        width: 22px;
+        height: 22px;
+    }
+}
+
 .header-info {
     background-color: $dark-800;
     color: $white;
@@ -5,14 +52,20 @@
     font-size: 13px;
     font-weight: 600;
     letter-spacing: 0.03em;
+    position: relative;
+    padding: 17px 0 15px;
+    @include r($lg) {
+        padding: 15px 7px 9px;
+    }
 
     &__list {
         display: flex;
-        padding: 17px 0 15px;
+   
+       
     }
 
     &__item {
-        flex-wrap: 0;
+        flex-grow: 0;
 
         &:not(:last-child) {
             margin-right: 24px;
@@ -31,6 +84,10 @@
         border-radius: 3px;
         transition: box-shadow,  color, opacity;
         transition-duration: 0.5s, 0.3s, 0.6s;
+
+        @include r($lg) {
+            display: none;
+        }
         &:focus {
             box-shadow: 0 0 0 3px $green-100;
          }
@@ -44,12 +101,14 @@
         &--address, 
         &--hotline {
             
+         
             &::before {
                 content: '';
                 position: absolute;
                 background-repeat: no-repeat;
                 background-size: contain;
                 left: 0;
+              
             }
         }
         &--address {
@@ -79,15 +138,41 @@
     padding: 22px 0 20px;
     background-color: $green-900;
     color: $white;
+    @include r($sm) {
+        padding: 7px 0 7px;
+    }
+       
 
     &__inner {
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
-
+    &__logo-img {
+        max-width: 200px;
+        width: 100%; 
+       
+    }
+    .logo {
+        transition:display 0.4s;
+        @include r($md) {
+            display: none;
+        }
+    }
+    .logo-adaptiv{
+        background-repeat: no-repeat;
+        background-size: cover;
+        display: none;
+        margin-right: 20px;
+        transition: display 0.4s;
+        @include r($md) {
+            display: block;
+        }
+    }
     &__catalog {
         color: $green-900;
+        max-width: 240px;
+        width: 100%;
         font-weight: 600;
         margin-right: 30px;
         padding: 15px 38px 15px 62px;
@@ -99,7 +184,12 @@
         position: relative;
         transition: background-color, border-radius, box-shadow;
         transition-duration: 0.5s, 0.3s, 0.5s;
-
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        @include r($lg) {
+            display: none;
+        }
         &:focus {
             box-shadow: 0 0 0 3px $green-100;
          }
@@ -122,6 +212,7 @@
             height: 17px;
             left: 18px;
             top: 16px;
+           
         }
         &::after {
             background-image: url('../images/icon/arrow-down.svg');
@@ -129,6 +220,7 @@
             height: 9px;
             right: 18px;
             top: 23px;
+           
         }
         &--active {
             &::after{
@@ -146,6 +238,7 @@
     &__item {
         &:not(:first-child) {
             margin-left: 10px;
+           
         }
     }
    
@@ -156,6 +249,10 @@
         border-radius: 3px;
         transition-property: box-shadow, background-color, opacity;
         transition-duration: 0.5s, 0.4s, 0.5s;
+        @include r($lg) {
+            width: 40px;
+            height: 40px;
+        }
         &::before {
             content: '';
             position: absolute;
@@ -167,6 +264,10 @@
             top:50%;
             left:50%;
             transform:translate(-50%,-50%);
+            @include r($lg) {
+                width: 40px;
+                height: 40px;
+            }
         }
         &:focus {
             box-shadow: 0 0 0 3px $white;
@@ -177,7 +278,23 @@
         &:active {
             opacity: 0.5;
         }
+        &--search {
+            display: none;
+            @include r($lg){
+                display: block;
+                margin-right: -5px;
+            }
+            &::before {
+                content:'' ;
+                background-image:url('../images/icon/icon-search-mob.svg') ;
+                width: 25px;
+                height: 32px;
+            }
+        }
         &--login {
+            @include r($lg) {
+                display: none;
+            }
             &::before {
                 content:'' ;
                 background-image:url('../images/icon/user.svg') ;
@@ -192,6 +309,10 @@
                 background-image:url('../images/icon/favorite.svg') ;
                 width: 32px;
                 height: 39px;
+                @include r($lg) {
+                    width: 24px;
+                    height: 25px;
+                }
                 
             }
         }
@@ -202,6 +323,10 @@
                 background-image: url('../images/icon/basket.svg');
                 width: 32px;
                 height: 32px;
+                @include r($lg) {
+                    width: 24px;
+                    height: 25px;
+                }
                 
             }
         }
@@ -220,8 +345,15 @@
         left: 0;
         font-size: 10px;
         padding: 2px 3px;
+        @include r($lg) {
+            width: 16px;
+            height: 16px;
+            padding: 0;
+            left: -2px;
+        }
     }
-
+  
+    
 }
 
 
@@ -233,6 +365,12 @@
     margin-right: 50px;
     position: relative;
     flex-wrap: 1;
+    @include r($xl) {
+        margin-right: 15px;
+    }
+    @include r($sm) {
+        display: none;
+    }
     &__label {
         width: 100%;
         &::after {
@@ -277,8 +415,14 @@
         padding: 16px 50px;
         background-color: $dark-800;
         border: none;
-        transition-property: background-color, box-shadow, opacity;
-        transition-duration: 0.4s, 0.6s, 0.7s;
+        transition-property: background-color, box-shadow, opacity, padding;
+        transition-duration: 0.4s, 0.6s, 0.7s, 0.6;
+        @include r($xl) {
+            padding: 16px 26px;
+        }
+        @include r($lg) {
+            padding: 16px 22px;
+        }
     }
 
     &__btn:hover {
@@ -293,3 +437,54 @@
         opacity: 0.7;
     }
 }
+.menu-btn {
+        display: none;
+        position: relative;
+        width: 30px;
+        height: 24px;
+        right: 0;
+        border-radius: 3px;
+        transition: 0.4s;
+        span {
+            content: '';
+            position: absolute;
+            background-color: #ffffff;
+            width: 100%;
+            height: 2px;
+            top: 11px;
+            transition: 0.4s;
+            &:hover {
+                background-color: $green-900;
+            }
+    
+        }
+        &:focus {
+            box-shadow: 0 0 0 2px $green-100;
+        }
+        &:hover::after,
+        &:hover::before {
+            background-color: $green-900;
+        }
+        @include r($lg) {
+            display: inline-block;
+        }
+
+        &::after,
+        &::before {
+            content: '';
+            position: absolute;
+            background-color: #ffffff;
+            width: 100%;
+            height: 2px;
+            transition: 0.3s;
+           
+        }
+        &::after {
+            top: 0;
+        }
+        &::before {
+            bottom: 0;
+        }
+      
+    }
+
