--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -14,5 +14,10 @@
 @import 'components/product-card';
 @import 'components/social';
 @import 'components/mobail';
-
+@import 'components/breadcrumb';
+@import 'components/aside';
+@import 'components/page';
+@import 'components/sort-widget';
+@import 'components/line-product';
+@import 'components/pagination'
 
