--- a/app/scss/components/_banner.scss
+++ b/app/scss/components/_banner.scss
@@ -6,30 +6,32 @@
 
     &__inner {
         display: flex;
-        @include r($lg) {
-           flex-wrap: wrap;
-           justify-content: center;
+        @include r($md) {
+            flex-wrap: wrap;
+            justify-content: center;
+            justify-content: space-around;
         }
-
     }
     &__item {
- 
-        @include r($lg) {
-            width: 100%;
-            margin-bottom: 15px;
+        @include r($md) {
+            margin-bottom: 20px;
         }
         &:not(:last-child) {
             margin-right: 30px;
             @include r($lg) {
                 margin-right: 0;
+
             }
         }
         &:first-child {
             color: $white;
             max-width: 630px;
             width: 100%;
+            @include r($lg) {
+                margin-right: 15px;
+            }
             @include r($md) {
-                max-width: 100%;
+                margin-right: 0px;
             }
           
         }
@@ -38,13 +40,17 @@
             max-width: 300px;
             width: 100%;
             @include r($md) {
+                width: calc(50% - 20px);
+                max-width: 350px;
+            }
+            @include r($sm) {
                 max-width: 100%;
-               
+                width: 100%;
             }
         }
         &:nth-child(2) {
             @include r($lg){
-                margin-right: 15px; 
+                margin-right: 10px; 
             }
             @include r($md) {
                 margin-right: 0;
@@ -52,7 +58,7 @@
         }
         &:nth-child(3) {
             @include r($lg){
-                margin-left: 15px; 
+                margin-left: 10px; 
             }
             @include r($md) {
                 margin-left: 0;
@@ -89,6 +95,7 @@
         line-height: 1;
         display: block;
         font-weight: 700;
+        @include line-clamp(1);
     }
     &__title {
         font-weight: 600;
@@ -96,14 +103,7 @@
         text-transform: uppercase;
         font-family: 'Ruda', sans-serif;
         margin-bottom: 6px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: -moz-box;
-        -moz-box-orient: vertical;
-        display: -webkit-box;
-        text-overflow: ellipsis;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
+        @include line-clamp(2);
         transition: font-size 0.4s;
       
         @include r($xl) {
