--- a/app/scss/components/_catalog.scss
+++ b/app/scss/components/_catalog.scss
@@ -29,7 +29,7 @@
             margin-bottom: 15px;
         }
         @include r($sm) {
-            max-width: 170px;
+            width: calc(50% - 5px);
             margin-bottom: 5px;
         }
     
