--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -1,47 +1,6 @@
-
 .header {
     &__logo {
-        margin-right: 24px;  
-    }
-    
-    &__btn-adaptiv {
-        display: flex;
-        position: absolute;
-        right: 17px;
-        top: 50%;
-        transform: translateY(-50%);
-        display: none;
-        @include r($lg) {
-            display: flex;
-        }
-    }
-    &__btn-link {
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        border-radius: 3px;
-        transition-property: box-shadow, opacity, color ;
-        transition-duration: 0.5s, 0.4s, 0.3s;
-        &:focus {
-            box-shadow: 0 0 0 3px $green-100;
-         }
-         &:hover {
-             opacity: 0.7;
-         }
-         &:active {
-             color: $green-100;
-         }
-    }
-    &__btn-link:nth-child(1) {
-        background-image: url('../images/icon/icon-car.svg');
-        width: 32px;
-        height: 22px;
-        margin-right: 30px;
-    }
-    &__btn-link:nth-child(2) {
-        background-image: url('../images/icon/icon-tel.svg');
-        width: 22px;
-        height: 22px;
+        margin-right: 24px;
     }
 }
 
@@ -54,14 +13,15 @@
     letter-spacing: 0.03em;
     position: relative;
     padding: 17px 0 15px;
+
     @include r($lg) {
         padding: 15px 7px 9px;
     }
 
     &__list {
         display: flex;
-   
-       
+
+
     }
 
     &__item {
@@ -70,10 +30,12 @@
         &:not(:last-child) {
             margin-right: 24px;
         }
+
         &:nth-child(2) {
             flex-grow: 1;
             padding-left: 18px;
         }
+
         &:first-child {
             margin-right: 24px;
         }
@@ -82,37 +44,42 @@
     &__link {
         position: relative;
         border-radius: 3px;
-        transition: box-shadow,  color, opacity;
+        transition: box-shadow, color, opacity;
         transition-duration: 0.5s, 0.3s, 0.6s;
 
         @include r($lg) {
             display: none;
         }
+
         &:focus {
             box-shadow: 0 0 0 3px $green-100;
-         }
-         &:hover {
-             opacity: 0.7;
-         }
-         &:active {
-             color: $green-100;
-         }
+        }
 
-        &--address, 
+        &:hover {
+            opacity: 0.7;
+        }
+
+        &:active {
+            color: $green-100;
+        }
+
+        &--address,
         &--hotline {
-            
-         
+
+
             &::before {
                 content: '';
                 position: absolute;
                 background-repeat: no-repeat;
                 background-size: contain;
                 left: 0;
-              
+
             }
         }
+
         &--address {
             padding-left: 44px;
+
             &::before {
                 background-image: url('../images/icon/icon-car.svg');
                 width: 32px;
@@ -120,8 +87,10 @@
                 top: -4px;
             }
         }
+
         &--hotline {
             padding-left: 44px;
+
             &::before {
                 background-image: url('../images/icon/icon-tel.svg');
                 width: 22px;
@@ -130,7 +99,7 @@
                 left: 10px;
             }
         }
-     
+
     }
 }
 
@@ -138,37 +107,44 @@
     padding: 22px 0 20px;
     background-color: $green-900;
     color: $white;
+
     @include r($sm) {
         padding: 7px 0 7px;
     }
-       
+
 
     &__inner {
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
+
     &__logo-img {
         max-width: 200px;
-        width: 100%; 
-       
+        width: 100%;
+
     }
+
     .logo {
-        transition:display 0.4s;
+        transition: display 0.4s;
+
         @include r($md) {
             display: none;
         }
     }
-    .logo-adaptiv{
+
+    .logo-adaptiv {
         background-repeat: no-repeat;
         background-size: cover;
         display: none;
         margin-right: 20px;
         transition: display 0.4s;
+
         @include r($md) {
             display: block;
         }
     }
+
     &__catalog {
         color: $green-900;
         max-width: 240px;
@@ -187,18 +163,20 @@
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
+
         @include r($lg) {
             display: none;
         }
+
         &:focus {
             box-shadow: 0 0 0 3px $green-100;
-         }
+        }
 
         &:hover {
             background-color: $green-200;
             border-radius: 6px 6px 0 0;
         }
-       
+
         &:before,
         &:after {
             content: '';
@@ -206,42 +184,46 @@
             background-repeat: no-repeat;
             background-size: contain;
         }
+
         &:before {
             background-image: url('../images/icon/nav_icon.svg');
             width: 25px;
             height: 17px;
             left: 18px;
             top: 16px;
-           
+
         }
+
         &::after {
             background-image: url('../images/icon/arrow-down.svg');
             width: 10px;
             height: 9px;
             right: 18px;
             top: 23px;
-           
+
         }
+
         &--active {
-            &::after{
+            &::after {
                 transform: rotate(180deg);
-                top: 18px; 
+                top: 18px;
             }
         }
-       
+
     }
 
     &__user {
         display: flex;
-    
+
     }
+
     &__item {
         &:not(:first-child) {
             margin-left: 10px;
-           
+
         }
     }
-   
+
     &__userbar {
         position: relative;
         width: 50px;
@@ -249,10 +231,12 @@
         border-radius: 3px;
         transition-property: box-shadow, background-color, opacity;
         transition-duration: 0.5s, 0.4s, 0.5s;
+
         @include r($lg) {
             width: 40px;
             height: 40px;
         }
+
         &::before {
             content: '';
             position: absolute;
@@ -261,43 +245,52 @@
             background-position: center;
             width: 50px;
             height: 50px;
-            top:50%;
-            left:50%;
-            transform:translate(-50%,-50%);
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+
             @include r($lg) {
                 width: 40px;
                 height: 40px;
             }
         }
+
         &:focus {
             box-shadow: 0 0 0 3px $white;
         }
+
         &:hover {
             background-color: rgba(#FFFFFF, 0.1);
         }
+
         &:active {
             opacity: 0.5;
         }
+
         &--search {
             display: none;
-            @include r($lg){
+
+            @include r($lg) {
                 display: block;
                 margin-right: -5px;
             }
+
             &::before {
-                content:'' ;
-                background-image:url('../images/icon/icon-search-mob.svg') ;
+                content: '';
+                background-image: url('../images/icon/icon-search-mob.svg');
                 width: 25px;
                 height: 32px;
             }
         }
+
         &--login {
             @include r($lg) {
                 display: none;
             }
+
             &::before {
-                content:'' ;
-                background-image:url('../images/icon/user.svg') ;
+                content: '';
+                background-image: url('../images/icon/user.svg');
                 width: 25px;
                 height: 32px;
             }
@@ -306,28 +299,30 @@
         &--favorite {
             &::before {
                 content: '';
-                background-image:url('../images/icon/favorite.svg') ;
+                background-image: url('../images/icon/favorite.svg');
                 width: 32px;
                 height: 39px;
+
                 @include r($lg) {
                     width: 24px;
                     height: 25px;
                 }
-                
+
             }
         }
 
         &--basket {
             &::before {
-                content:'';
+                content: '';
                 background-image: url('../images/icon/basket.svg');
                 width: 32px;
                 height: 32px;
+
                 @include r($lg) {
                     width: 24px;
                     height: 25px;
                 }
-                
+
             }
         }
 
@@ -345,6 +340,7 @@
         left: 0;
         font-size: 10px;
         padding: 2px 3px;
+
         @include r($lg) {
             width: 16px;
             height: 16px;
@@ -352,8 +348,8 @@
             left: -2px;
         }
     }
-  
-    
+
+
 }
 
 
@@ -365,14 +361,18 @@
     margin-right: 50px;
     position: relative;
     flex-wrap: 1;
+
     @include r($xl) {
         margin-right: 15px;
     }
+
     @include r($sm) {
         display: none;
     }
+
     &__label {
         width: 100%;
+
         &::after {
             content: '';
             position: absolute;
@@ -385,7 +385,7 @@
             left: 13px;
             top: 12px;
         }
-       
+
     }
 
     &__field {
@@ -396,17 +396,20 @@
         transition: box-shadow, background-color;
         transition-duration: 0.4s, 0.5s;
         line-height: 0.03em;
+
         &:focus {
             box-shadow: 0 0 0 3px $green-200;
         }
+
         &:hover {
             background-color: $green-200;
-            
+
         }
+
         &::placeholder {
             font-size: 14px;
             color: $dark-800;
-            
+
         }
     }
 
@@ -417,9 +420,11 @@
         border: none;
         transition-property: background-color, box-shadow, opacity, padding;
         transition-duration: 0.4s, 0.6s, 0.7s, 0.6;
+
         @include r($xl) {
             padding: 16px 26px;
         }
+
         @include r($lg) {
             padding: 16px 22px;
         }
@@ -437,54 +442,139 @@
         opacity: 0.7;
     }
 }
-.menu-btn {
-        display: none;
-        position: relative;
-        width: 30px;
-        height: 24px;
-        right: 0;
-        border-radius: 3px;
+
+.burger {
+    display: none;
+    position: relative;
+    width: 30px;
+    height: 24px;
+    right: 0;
+    border-radius: 3px;
+    transition: 0.4s;
+
+    &:focus {
+        box-shadow: 0 0 0 2px $green-100;
+    }
+
+    &:hover::after,
+    &:hover::before {
+        background-color: $green-900;
+    }
+
+    @include r($lg) {
+        display: inline-block;
+    }
+
+    &__line {
+        position: absolute;
+        background-color: #ffffff;
+        max-width: 100%;
+        width: 100%;
+        height: 2px;
+        left: 0;
         transition: 0.4s;
-        span {
-            content: '';
-            position: absolute;
-            background-color: #ffffff;
-            width: 100%;
-            height: 2px;
-            top: 11px;
-            transition: 0.4s;
-            &:hover {
-                background-color: $green-900;
-            }
-    
-        }
-        &:focus {
-            box-shadow: 0 0 0 2px $green-100;
-        }
-        &:hover::after,
-        &:hover::before {
+        top: 50%;
+		transform: translateY(-50%);
+        transition: transform 0.3s ease-in-out;
+        &:hover {
             background-color: $green-900;
         }
-        @include r($lg) {
-            display: inline-block;
-        }
 
-        &::after,
-        &::before {
-            content: '';
-            position: absolute;
-            background-color: #ffffff;
-            width: 100%;
-            height: 2px;
-            transition: 0.3s;
-           
-        }
-        &::after {
-            top: 0;
-        }
-        &::before {
-            bottom: 0;
-        }
-      
     }
+    &::after,
+    &::before {
+        content: '';
+        position: absolute;
+        background-color: #ffffff;
+        width: 100%;
+        height: 2px;
+        left: 0;
+        transition: 0.3s;
+
+    }
+
+    &::before {
+		top: 0;
+	}
+
+	&::after {
+		bottom: 0;
+	}
+
+
+    &--active {
+        bottom: 0;
+        z-index: 9;
+        left: 249px;
+        top: 63px;
+        position: absolute;
+		.burger__line {
+			transform: scale(0);
+			transition: transform 0.3s ease-in-out;
+            position: absolute;
+		}
+
+		&::before {
+			transform: rotate(45deg);
+            top: 0;
+			transition: transform 0.3s ease-in-out, top 0.3s ease-in-out;
+		}
+
+		&::after {
+			transform: rotate(-45deg);
+            top:0;
+			transition: transform 0.3s ease-in-out, top 0.3s ease-in-out;
+		}
+    }
+
+}
+
+.mobail__icon {
+    display: flex;
+    position: absolute;
+    right: 17px;
+    top: 50%;
+    transform: translateY(-50%);
+    display: none;
+
+    @include r($lg) {
+        display: flex;
+    }
+}
+
+.mobail__button {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 3px;
+    transition-property: box-shadow, opacity, color;
+    transition-duration: 0.5s, 0.4s, 0.3s;
+
+    &:focus {
+        box-shadow: 0 0 0 3px $green-100;
+    }
+
+    &:hover {
+        opacity: 0.7;
+    }
+
+    &:active {
+        color: $green-100;
+    }
+
+    &:nth-child(1) {
+        background-image: url('../images/icon/icon-car.svg');
+        width: 32px;
+        height: 22px;
+        margin-right: 30px;
+    }
+
+    &:nth-child(2) {
+        background-image: url('../images/icon/icon-tel.svg');
+        width: 22px;
+        height: 22px;
+    }
+
+
+}
 
