--- a/app/scss/components/_news.scss
+++ b/app/scss/components/_news.scss
@@ -28,19 +28,18 @@
         width: 100%;
         position: relative;
         margin: 0 5px 20px;
-        @include r($sm) {
-            margin: 0 0 14px;
+        @include r($lg) {
+            width: calc(50% - 30px);
         }
+        @include r($sm) {
+            width: calc(100% - 30px);
+        }
+       
     }
     &__img {
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
         object-fit: cover;
         width: 100%;
-        @include r($sm) {
-            max-height: 200px;
-        }
+        
     }
     &__text {
         margin: 9px 18px 16px;
@@ -50,12 +49,7 @@
         color: $dark-900;
         letter-spacing: 1;
         transition: color 0.4s;
-        white-space: inherit;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        -webkit-line-clamp: 3;
-        -webkit-box-orient: vertical;
+        @include line-clamp(3);
         @include r($sm) {
             margin: 10px 0px 13px 15px;
             font-size: 14px;
