--- a/app/scss/components/_slider.scss
+++ b/app/scss/components/_slider.scss
@@ -37,6 +37,7 @@
     &__text {
         margin: 12px 0 32px;
         letter-spacing: 0;
+        @include line-clamp(1);
         @include r($md) {
             margin: 15px 0  27px;
         }
@@ -55,6 +56,7 @@
         text-transform: uppercase;
         color: $dark-500;
         margin-bottom: 0px;
+        @include line-clamp(3);
 
         @include r($lg) {
             font-size: 40px;
